# dot-sync

./: Cargo.toml  LICENSE  README.md  install.sh  json_repro
.github/: dependabot.yml
.github/release-notes/: v0.1.0.md
.github/workflows/: cd.yml  ci.yml  dot-sync.yml  dotctl.yml
src/: add.rs  cli.rs  config.rs  discovery.rs  document.rs  generate.rs  lib.rs  main.rs  path.rs  picker.rs  picker_state.rs  restore.rs  status.rs  sync.rs
tests/: e2e.rs  install.sh
tests/fixtures/env/pull_basic/: .sync.yaml  source.env  source.expected.env  target.env
tests/fixtures/env/push_basic/: .sync.yaml  source.env  target.env  target.expected.env
tests/fixtures/env/sync_target_wins/: .sync.yaml  source.env  source.expected.env  target.env  target.expected.env
tests/fixtures/gitconfig/pull_basic/: .sync.yaml  source.expected.gitconfig  source.gitconfig  target.gitconfig
tests/fixtures/gitconfig/push_basic/: .sync.yaml  source.gitconfig  target.expected.gitconfig  target.gitconfig
tests/fixtures/gitconfig/sync_target_wins/: .sync.yaml  source.expected.gitconfig  source.gitconfig  target.gitconfig
tests/fixtures/json/array_pinned_bool/: .sync.yaml  source.json  target.expected.json  target.json
tests/fixtures/json/array_pinned_int/: .sync.yaml  source.json  target.expected.json  target.json
tests/fixtures/json/array_pinned_string/: .sync.yaml  source.json  target.json
tests/fixtures/json/array_wildcard/: .sync.yaml  source.json  target.json
tests/fixtures/json/backup_write/: .sync.yaml  target.expected.json
tests/fixtures/json/basic_sync/: .sync.yaml  source.json  target.expected.json
tests/fixtures/json/dry_run_no_write/: target.json
tests/fixtures/json/float_source_value/: .sync.yaml  source.json  target.json
tests/fixtures/json/jsonc_block_comment_preserved/: .sync.yaml  target.expected.jsonc  target.jsonc
tests/fixtures/json/jsonc_comments_preserved/: .sync.yaml  source.jsonc  target.expected.jsonc  target.jsonc
tests/fixtures/json/jsonc_cross_dialect/: .sync.yaml  source.jsonc  target.expected.json  target.json
tests/fixtures/json/jsonc_format_alias/: .sync.yaml  source.jsonc  target.jsonc
tests/fixtures/json/jsonc_multi_line_comment_run/: target.expected.jsonc  target.jsonc
tests/fixtures/json/jsonc_nested_indent_inheritance/: .sync.yaml  source.jsonc  target.jsonc
(+72 files in other folders)
