[package]
name = "dot-sync"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dot-sync"
path = "src/main.rs"

[[bin]]
name = "ds"
path = "src/bin/ds.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
jsonc-parser = { version = "0.32", features = ["cst", "serde_json", "preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml_ng = "0.10"
toml_edit = "0.25"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
