[package]
name = "dot-sync"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dot-sync"
path = "src/main.rs"

[[bin]]
name = "ds"
path = "src/bin/ds.rs"

[dependencies]
anyhow = "1"
bstr = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3"
dirs = "6"
gix-config = "0.57"
# Direct dep on gix-hash with `sha1` so the empty-`Kind` enum in
# gix-hash 0.25.0 (gated behind sha1/sha256 features) gets a variant
# under rustc ≥ 1.94's stricter exhaustivity check. gix-config does
# not enable these features through its own feature graph.
gix-hash = { version = "0.25", features = ["sha1"] }
jsonc-parser = { version = "0.32.4", features = ["cst", "serde_json", "preserve_order"] }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml_ng = "0.10"
toml_edit = "0.25"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
